[package]
name = "two_d_array"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "two_d_benchmark"
harness = false
